# eml2md

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.agent/workflows/: commit.md
.github/workflows/: ci.yml
src/: content_type.rs  eml.rs  lib.rs  main.rs
src/formatter/: mod.rs  simple.rs
tests/example/: Test.eml
